Added images and some interesting facts about myself(Robert), and style.css

--- a/index.html
+++ b/index.html
@@ -3,8 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <title>About Robert</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>About Robert</h1>
+
+    <div class="hobbies">
+        <img class="selfieImg" src="image1.jpg" alt="Robert">
+    </div>
+
+        <p>
+            Robert really loves to hunt, fish, kayak, and train dogs. Robert enjoys playing video games like "Super Smash Bros. Ultimate", "Skyrim", and "Minecraft"
+        </p>
+
+
+    <div class="food">
+        <img class="squirrel" src="squirrel-coffee.jpg" alt="Squirrel drinking coffee">
+    </div>
+
+        <p>
+            Robert likes to think of himself as a coffee connoisseur and also loves smoking meat!
+        </p>
+
+
+    <div class="bucketlist">
+        <img class="fishyimg" src="image2.jpg" alt="Robert with a fishy">
+    </div>
+
+        <p>
+            One item on Robert's bucket-list is to kayak fish down the Devil's River in Texas. The Devils River is a 30 mile stretch of water with various campsites along the way and great fishing.
+        </p>
+
 </body>
 </html>
