corrected typo again

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </div>
 
         <p>
-            One item on Robert's bucket-list is to kayak/fish down the Devil's River in Texas. The Devils River is a 30 mile stretch of water with various campsites along the way and great fishing.
+            One item on Robert's bucket-list is to kayak/fish down the Devil's River in Texas. The Devil's River is a 30 mile stretch of water with various campsites along the way and great fishing.
         </p>
 
 </body>
