--- a/index.html
+++ b/index.html
@@ -6,33 +6,46 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <img src="./hollow_construction.gif" alt="bad 'under construction' gif">
+    <img src="./construction_short.gif" alt="another bad 'under construction' gif">
+    <img src="./hollow_construction.gif" alt="bad 'under construction' gif">
     <h1>About Robert</h1>
 
     <div class="hobbies">
         <img class="selfieImg" src="image1.jpg" alt="Robert">
     </div>
 
-        <p>
-            Robert really loves to hunt, fish, kayak, and train dogs. Robert enjoys playing video games like "Super Smash Bros. Ultimate", "Skyrim", and "Minecraft"
-        </p>
+    <h3>
+        Robert really loves to:
+    </h3>
+    <ul>
+    <li>hunt</li>
+    <li>fish</li>
+    <li>kayak</li>
+    <li>train dogs</li>
+    </ul>
+    <p>
+    Robert enjoys playing video games like "Super Smash Bros. Ultimate", "Skyrim", and "Minecraft"
+    </p>
 
 
     <div class="food">
         <img class="squirrel" src="squirrel-coffee.jpg" alt="Squirrel drinking coffee">
     </div>
 
-        <p>
-            Robert likes to think of himself as a coffee connoisseur and also loves smoking meat!
-        </p>
+    <p>
+        Robert likes to think of himself as a meat connoisseur and also loves smoking coffee!
+    </p>
 
 
     <div class="bucketlist">
         <img class="fishyimg" src="image2.jpg" alt="Robert with a fishy">
     </div>
 
-        <p>
-            One item on Robert's bucket-list is to kayak/fish down the Devil's River in Texas. The Devil's River is a 30 mile stretch of water with various campsites along the way and great fishing.
-        </p>
+    <p>
+        One item on Robert's bucket-list is to kayak/fish down the Devil's River in Texas. The Devil's River is a 30
+        mile stretch of water with various campsites along the way and great fishing.
+    </p>
 
 </body>
 </html>
