--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <img src="./hollow_construction.gif" alt="bad 'under construction' gif">
-    <img src="./construction_short.gif" alt="another bad 'under construction' gif">
-    <img src="./hollow_construction.gif" alt="bad 'under construction' gif">
+    <div class="banner">
+        <img src="./hollow_construction.gif" alt="bad 'under construction' gif">
+        <img src="./construction_short.gif" alt="another bad 'under construction' gif">
+        <img src="./hollow_construction.gif" alt="bad 'under construction' gif">
+    </div>
     <h1>About Robert</h1>
 
     <div class="hobbies">
