Finished adding gifs and decorations.

--- a/index.html
+++ b/index.html
@@ -7,46 +7,65 @@
 </head>
 <body>
     <div class="banner">
-        <img src="./hollow_construction.gif" alt="bad 'under construction' gif">
-        <img src="./construction_short.gif" alt="another bad 'under construction' gif">
-        <img src="./hollow_construction.gif" alt="bad 'under construction' gif">
+        <img src="assets/hollow_construction.gif" alt="bad 'under construction' gif">
+        <img src="assets/construction_short.gif" alt="another bad 'under construction' gif">
+        <img src="assets/hollow_construction.gif" alt="bad 'under construction' gif">
     </div>
     <h1>About Robert</h1>
 
-    <div class="hobbies">
-        <img class="selfieImg" src="image1.jpg" alt="Robert">
+    <div class="selfie-stack">
+        <div class="selfie-stack-top"><img class="shades" src="assets/shades.png" alt="cool shades"></div>
+        <div class="selfie-stack-bottom"><img class="selfieImg" src="assets/selfie.jpg" alt="Robert"></div>
     </div>
 
     <h3>
         Robert really loves to:
     </h3>
-    <ul>
-    <li>hunt</li>
-    <li>fish</li>
-    <li>kayak</li>
-    <li>train dogs</li>
-    </ul>
-    <p>
-    Robert enjoys playing video games like "Super Smash Bros. Ultimate", "Skyrim", and "Minecraft"
+    <div class="list">
+        <ul>
+            <li>hunt</li>
+            <li>fish</li>
+            <li>kayak</li>
+            <li>train dogs</li>
+        </ul>
+    </div>
+    <div class="games"><p>
+        Robert enjoys playing video games:
     </p>
+        <div class="console-logos">
+            <div class="logo-stack-1"><img src="assets/n64.gif" alt="nintendo64 logo"></div>
+            <div class="logo-stack-2"><img src="assets/sega.gif" alt="sega logo"></div>
+            <div class="logo-stack-3"><img src="assets/n64.gif" alt="nintendo64 logo"></div>
+            <div class="logo-stack-4"><img src="assets/sega.gif" alt="sega logo"></div>
+            <div class="logo-stack-5"><img src="assets/n64.gif" alt="nintendo64 logo"></div>
+            <div class="logo-stack-6"><img src="assets/sega.gif" alt="sega logo"></div>
+            <!--        <div class="logo-stack-7"><img src="assets/n64.gif" alt="nintendo64 logo"></div>-->
+        </div>
+        <div class=games-list>
+            <p><img class="listIcon" src="assets/waluigi.gif" alt="Wario gif">"Super Plumber Boys"</p>
+            <p><img class="listIcon" src="assets/hyper_sanic.gif" alt="hyper-sonic gif"> "Sanic: Gotta Go Fast"</p>
+            <p><img class="listIcon" src="assets/lemming.gif" alt="lemming gif"> "Minecraft"</p>
+        </div>
+    </div>
 
 
     <div class="food">
-        <img class="squirrel" src="squirrel-coffee.jpg" alt="Squirrel drinking coffee">
+        <p>
+            Robert likes to think of himself as a meat connoisseur</p>
+        <img class="squirrel" src="assets/squirrel-coffee.jpg" alt="Squirrel drinking coffee">
+        <p>and also loves smoking coffee!
+        </p>
     </div>
-
-    <p>
-        Robert likes to think of himself as a meat connoisseur and also loves smoking coffee!
-    </p>
 
 
     <div class="bucketlist">
-        <img class="fishyimg" src="image2.jpg" alt="Robert with a fishy">
+        <img class="fishyimg" src="assets/fishy.jpg" alt="Robert with a fishy">
     </div>
 
     <p>
-        One item on Robert's bucket-list is to kayak/fish down the Devil's River in Texas. The Devil's River is a 30
-        mile stretch of water with various campsites along the way and great fishing.
+        One item on Robert's bucket-list is to dive/fish down the Challenger Deep at the southern end of the Mariana
+        Trench. The Challenger Deep is a point almost 11,000 meters below the surface of the ocean, where the immense
+        pressure makes exploration ... <em>Challenging!</em>
     </p>
 
 </body>
